--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse my-3" id="navbarSupportedContent" style="margin-left: 25%;">
+                <div class="collapse navbar-collapse my-3" id="navbarSupportedContent" style="margin-left: 45%;">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
 
@@ -34,19 +34,21 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#" style="color: #2eadff;font-size: 18px;"><strong>Marketing</strong></a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#" style="color: #223949;font-size: 18px;"><strong>Experience cliente</strong></a>
-                        </li>
                        
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html" tabindex="-1" aria-disabled="true" style="color: #2eadff;font-size: 18px;"><strong>Contacts</strong></a>
                         </li>
                     </ul>
+                    <form class="d-flex ms-auto">
+                      <button type="button" class="btn btn-danger">
+                          <a href="https://app.brandway.ci/">Se connecter</a>
+                      </button>
+                  </form>
                 </div>
             </div>
         </nav>
     </header>
-    <main>
+    <main style="justify-content: center;text-align: center;">
         <section id = "card-head">
             <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
@@ -76,38 +78,38 @@
         <article>
             <br/>
           <h1 style="margin-top: 100px;">Présentation de la solution BRANDWAY</h1>
-          <div style="background-color: red; border-width: 2px; width: 50px; height: 10px; margin-bottom: 20px;">
+          <!-- <div style="background-color: red; border-width: 2px; width: 50px; height: 10px; margin-top: 20px;">
             <p></p>
-        </div>
-          <p>
+        </div> -->
+          <p class="text-brand">
             Fruit du parténariat entre <strong>YADEC CONSULTING</strong> et de
             <strong>INOVYX ,</strong>
           </p>
-          <p>Brandway est une plateforme d'étude et de sondage en ligne.</p>
+          <p class="text-brand">Brandway est une plateforme d'étude et de sondage en ligne.</p>
           <br />
-          <p class="text-brand">
+          <p class="text-brand2">
             Brandway est bien plus qu'une simple plateforme d'étude et de
-            sondage en ligne. C'est votre allié dans la quete de comprendre vos
-            clients; de mesure de satisfaction et d'optimiser votre stratégie.
+            sondage en ligne.<br/> C'est votre allié dans la quete de comprendre vos
+            clients; <br/>de mesure de satisfaction et d'optimiser votre stratégie.
           </p>
           <br />
-          <p>
+          <p class="text-brand">
             Avec Brandway déployer aisement vos campagnes (formulaires) sur
             différents supports:
           </p>
-          <ul>
-            <li>Intégration a votre site web</li>
-            <li>Vos réseaux sociaux</li>
-            <li>Par QR Code</li>
-            <li>Bornes</li>
+          <ul class="text-brand">
+            <p> *Intégration a votre site web</p>
+            <p> *Vos réseaux sociaux</p>
+            <p> *Par QR Code</p>
+            <p> *Bornes</p>
           </ul>
         </article>
       </section>
       <section id="avantages">
         <h1>Avantages clés de brandway</h1>
-        <div style="background-color: red; border-width: 2px; width: 50px; height: 10px; margin-bottom: 20px;">
+        <!-- <div style="background-color: red; border-width: 2px; width: 50px; height: 10px; right: 300px; left:350px">
             <p></p>
-        </div>
+        </div> -->
         <article>
            <h3>Accessibilité accrue:</h3>
             <p>
@@ -138,9 +140,9 @@
 
       <section id="contact-info">
         <h1>Contact et demande d'information</h1>
-        <div style="background-color: red; border-width: 2px; width: 50px; height: 10px; margin-bottom: 20px;">
+        <!-- <div style="background-color: red; border-width: 2px; width: 50px; height: 10px; margin-bottom: 20px;">
             <p></p>
-        </div>
+        </div> -->
         <p class="demande-info">Nous sommes ravis de discuter plus en details de la maniere dont brandway peut renforcer 
             votre compréhension du marche, améliorer la satisfaction client, et conduire a des prises de décisions plus
             éclairées.               
